--- a/Cargo.toml
+++ b/Cargo.toml
@@ -119,7 +119,7 @@ rsp2-dynmat = { path = "src/dynmat" }
 #  none of them are due to rust-lang-nursery/rls#169
 rand = "0.3"
 serde_json = "1"
-serde_yaml = "0.8"
+serde_yaml = "0.7"
 log = "0.4"
 fern = { version = "0.5", features = ["colored"] }
 env_logger = "0.6.1"
@@ -166,4 +166,14 @@ exclude = [
     "scripts/rsp2-pot-debug",
 ]
 
+[profile.dev.package."rsp2-array-types"]
+opt-level = 3
 
+[profile.dev.package."rsp2-kets"]
+opt-level = 3
+
+[profile.dev.package."rsp2-potentials"]
+opt-level = 3
+
+[profile.dev.package."rsp2-structure"]
+opt-level = 3
