--- a/generation/Cargo.toml
+++ b/generation/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 itertools = "0.9"
 nalgebra = "0.23"
 rand = "0.7"
-rayon = "1.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 vasp-poscar = "0.3"
+clap = "3.0.0-beta.2"
