--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/colin-daniels/agnr-ml"
+exclude = ["/rsp2/**"]
 
 [lib]
 name = "agnr_ml"
