--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -25,7 +25,6 @@ jobs:
         docker run --rm -v "$PWD:/io" \
           docker.pkg.github.com/colin-daniels/maturin-docker/maturin:0.8.3-1.48.0 \
           build                   \
-          --interpreter python3.6 \
           --interpreter python3.7 \
           --interpreter python3.8 \
           --interpreter python3.9 \
@@ -46,7 +45,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9']
+        python-version: ['3.7', '3.8', '3.9']
 
     steps:
     - uses: actions/checkout@v2
