Refactor rust lib layout, add structure output.
Also add a simple structure conversion test and some small edits to
pytest/CI-related files.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Python Tests
+name: Test
 
 on:
   push:
@@ -76,4 +76,4 @@ jobs:
       run: |
         # install from the previously built wheels
         pip install --find-links=dist "$PYTHON_PACKAGE_NAME"
-        pytest tests
+        pytest
