--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
     - name: Build wheels
       run: |
         docker run --rm -v "$PWD:/io" \
+          --env CARGO_TERM_COLOR=always \
           docker.pkg.github.com/colin-daniels/maturin-docker/maturin:0.8.3-1.48.0 \
           build                   \
           --interpreter python3.7 \
